--- a/python/main.ipynb
+++ b/python/main.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def PascalTree1(line: int):\n",
+    "def PascalTriangle1(line: int):\n",
     "    if line == 1:\n",
     "        return [1]\n",
     "    cur = [1, 1]\n",
@@ -62,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def PascalTree2(line: int):\n",
+    "def PascalTriangle2(line: int):\n",
     "    if line == 1:\n",
     "        return [1]\n",
     "    cur = [1, 1]\n",
@@ -87,7 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def PascalTree3(line: int):\n",
+    "def PascalTriangle3(line: int):\n",
     "    if line == 1:\n",
     "        return [1]\n",
     "    cur = [1, 1]\n",
@@ -152,19 +152,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                               \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "times_1 = measure(PascalTree1, 5, 3)\n",
-    "times_2 = measure(PascalTree2, 5, 3)\n",
-    "times_3 = measure(PascalTree3, 5, 3)"
+    "times_1 = measure(PascalTriangle1, 5, 3)\n",
+    "times_2 = measure(PascalTriangle2, 5, 3)\n",
+    "times_3 = measure(PascalTriangle3, 5, 3)"
    ]
   },
   {
@@ -176,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
